# projets

riskworkbench/: CMakeLists.txt  conv.csv  greeks_bench.csv  iv_surface_grid.csv
riskworkbench/app/cli/bs_ref/: main.cpp
riskworkbench/app/cli/calib/: fit_bs_global.cpp  make_synth_bs_market.cpp
riskworkbench/app/cli/gbm_moments/: main.cpp
riskworkbench/app/cli/greeks_runner/: main.cpp
riskworkbench/app/cli/iv_solver/: iv_export_and_qc.cpp  iv_from_csv.cpp  iv_surface_info.cpp  test_iv_solver.cpp
riskworkbench/app/cli/market_csv/: market_csv_info.cpp  test_read_csv.cpp
riskworkbench/app/cli/mc_runner/: main.cpp
riskworkbench/app/cli/qc/: qc_smile_fit.cpp
riskworkbench/app/cli/smile/: smile_info.cpp
riskworkbench/app/cli/svi/: fit_svi.cpp
riskworkbench/app/cli/vr_bench/: main.cpp
riskworkbench/app/gui/src/: CalibWorker.cpp  CalibWorker.hpp  MainWindow.cpp  MainWindow.hpp  McWorker.cpp  McWorker.hpp
riskworkbench/app/gui/ui/: MainWindow.ui
riskworkbench/app/gui/widgets/: ChartView.hpp
riskworkbench/data/: demo_spx.csv
riskworkbench/data/iv_exports/GUI/: qc_residuals_ui_20251009-144549.csv
riskworkbench/data/iv_exports/SPX/: ivgrid_SPX_20251013-145443.csv  ivgrid_SPX_20251016-153611.csv  ivgrid_SPX_20251020-165819.csv  ivgrid_SPX_logx_NK41_K3500-6500_T0.2500-0.5000-1.0000_20250917-185007.csv  qc_residuals.csv  svi_params.csv
riskworkbench/data/market_samples/: sample_market.csv  spx_residus_demo.csv  synth_sigma02.csv
riskworkbench/data/projects/: calib_SPX_20251013-145446.json  calib_SPX_20251016-153615.json  calib_SPX_20251016-153616.json  calib_SPX_20251016-154702.json  calib_SPX_20251016-154719.json  calib_SPX_20251016-154755.json  calib_SPX_20251020-165803.json  project_20250912_212300.json  project_20251019_192659.json  project_20251020_141446.json  project_20251020_165904.json
riskworkbench/docs/journal/: phase1.tex  phase2.tex  phase3.tex  phase4.tex
riskworkbench/include/rw/calibration/: calib.hpp  svi.hpp
riskworkbench/include/rw/config/: greeks_config.hpp  mc_config.hpp
riskworkbench/include/rw/core/: normal_rng.hpp  stats.hpp
riskworkbench/include/rw/io/: market_csv.hpp
riskworkbench/include/rw/market/: instrument.hpp  iv_surface.hpp  market_data.hpp  surface.hpp
riskworkbench/include/rw/models/: gbm.hpp
riskworkbench/include/rw/payoffs/: vanilla.hpp
riskworkbench/include/rw/pricing/: analytic_bs.hpp  greeks.hpp  implied_vol.hpp  mc_pricer.hpp
riskworkbench/include/rw/qc/: qc.hpp
riskworkbench/include/rw/smile/: smile.hpp
riskworkbench/scripts/: check_iv_surface.sh  greeks_bench.sh  greeks_lrm_bench.sh  greeks_pw_bench.sh  run_micro_exps.sh  vr_tests.sh
riskworkbench/src/calibration/: calib.cpp  calib_build_smile.cpp  svi.cpp
riskworkbench/src/core/: normal_rng.cpp  stats.cpp
riskworkbench/src/io/: market_csv.cpp
riskworkbench/src/market/: iv_surface.cpp  surface.cpp
riskworkbench/src/models/: gbm.cpp
riskworkbench/src/pricing/: analytic_bs.cpp  greeks.cpp  implied_vol.cpp  mc_pricer.cpp
riskworkbench/src/qc/: qc.cpp
riskworkbench/src/smile/: smile.cpp
riskworkbench/ui/: MainWindow.ui
